--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/WhatsApp Image 2025-05-20 at 08.04.06.jpeg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Henrique</p>
         <h1>Eu Estudo Programação</h1>
