--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div>
             <p class="badge bg-secondary">HTML</p>
             <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary">Matemática</p>
+            <p class="badge bg-secondary">Raciocínio</p>
         </div>
     </header>
     <main class="container mt-5">
@@ -113,8 +113,8 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                    <a href="https://henriquelimaz.github.io/Henrique-Books/">Ver projeto ao vivo</a>
+                    <a href="https://github.com/HenriqueLimaZ/Henrique-Books">Ver código do projeto</a>
                 </div>
             </div>
         </div>
