--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="Screenshot 2025-05-27 07.29.29.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
                         <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
@@ -109,7 +109,7 @@
                         esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na
                         experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
                         a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100"
+                    <img src="Screenshot 2025-05-27 07.29.29.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
